fix modal padding issues on mobile

--- a/style.css
+++ b/style.css
@@ -33,6 +33,9 @@ body.modal-open {
   -ms-overflow-style: none; /* IE and Edge */
   scrollbar-width: none; /* Firefox */
 }
+body.modal-open {
+  position: fixed;
+}
 body::-webkit-scrollbar {
   display: none;
 }
@@ -56,6 +59,7 @@ body::-webkit-scrollbar {
   -webkit-box-shadow: -3px 0px 10px -6px rgb(0 0 0 / 35%) !important;
   box-shadow: -3px 0px 10px -6px rgb(0 0 0 / 35%) !important;
   max-width: 100%;
+  padding: 0 15px;
 }
 
 .backButton i {
